插件修改和优化